--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/carxinho/gulu#readme",
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
+    "chai": "^4.2.0",
+    "chai-spies": "^1.0.0",
     "parcel-bundler": "^1.12.3",
     "sass": "^1.20.1",
     "vue-template-compiler": "^2.6.10"
@@ -31,7 +33,6 @@
     "vue-hot-reload-api": "^2.3.3"
   },
   "alias": {
-    "vue" : "./node_modules/vue/dist/vue.common.js"
+    "vue": "./node_modules/vue/dist/vue.common.js"
   }
 }
-
