--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gulu",
-  "version": "0.0.1",
+  "name": "wheel-1-1",
+  "version": "0.0.2",
   "description": "这是一个vue ui 组件",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
