--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/carxinho/gulu.git"
+    "url": "https://github.com/carxinho/wheel.git"
   },
   "keywords": [
     "vue",
@@ -18,9 +18,9 @@
   "author": "Carxinho",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/carxinho/gulu/issues"
+    "url": "https://github.com/carxinho/wheel/issues"
   },
-  "homepage": "https://github.com/carxinho/gulu#readme",
+  "homepage": "https://github.com/carxinho/wheel#readme",
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
     "chai": "^4.2.0",
