--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "npx parcel index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache",
     "dev-karma": "karma start",
-    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
+    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "repository": {
     "type": "git",
@@ -38,9 +40,12 @@
     "sass": "^1.20.1",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuepress": "^1.0.2"
   },
   "dependencies": {
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.3"
   },
